social_oms_integration/force-app/main/default/objects/OrderSummaryExport__c/OrderSummaryExport__c.object-meta.xml
<CustomObject>
    <label>OrderSummaryExport</label>
    <nameField>
        <label>OrderSummaryExport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderSummaryExports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>