social_oms_integration/force-app/main/default/objects/OrderSummaryExport__c/fields/Exception_Msg__c.field-meta.xml
<CustomField>
    <fullName>Exception_Msg__c</fullName>
    <label>Exception Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>