social_oms_integration/force-app/main/default/objects/OrderSummaryExport__c/fields/Export_Attempt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Export_Attempt_Date_Time__c</fullName>
    <label>Export Attempt Date Time</label>
    <type>DateTime</type>
</CustomField>