social_oms_integration/force-app/main/default/objects/OrderSummaryExport__c/fields/Export_Attempts_Counter__c.field-meta.xml
<CustomField>
    <fullName>Export_Attempts_Counter__c</fullName>
    <label>Export Attempts Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>