social_oms_integration/force-app/main/default/objects/OrderSummaryExport__c/fields/Order_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary_Id__c</fullName>
    <label>Order Summary Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>