social_oms_integration/force-app/main/default/objects/OrderSummaryExport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Summary_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Export_Attempt_Date_Time__c</columns>
    <columns>Export_Attempts_Counter__c</columns>
    <columns>Exception_Msg__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>